# sphinx-click

./: .bumpversion.cfg  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  __pkginfo__.py  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
sphinx_click/: __init__.py  _cmdoption.py
tests/: requirements.txt  test_formatter.py
tests/test_formatter_/: test_basic_parameters.rst  test_basic_parameters_group.rst  test_basic_parameters_group.txt  test_basics.txt  test_defaults.rst  test_help_epilog.rst  test_nested_none.txt  test_nested_short.rst  test_no_line_wrapping.txt  test_no_parameters.txt  test_order_of_commands.rst  test_titles.rst  test_titles.txt
