[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "sphinx-click"
version = "0.0.0"
description = "Sphinx extension that automatically documents click applications."
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
name = 'Dominic Davis-Foster"'
email = "dominic@davis-foster.co.uk"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/sphinx-click"
"Issue Tracker" = "https://github.com/domdfcoding/sphinx-click/issues"
"Source Code" = "https://github.com/domdfcoding/sphinx-click"

[tool.dep_checker]
allowed_unused = [ "jinja2", "markupsafe",]

[tool.mkrecipe]
conda-channels = [ "domdfcoding",]
extras = "all"
license-key = "MIT"
package = "sphinx_click"

[tool.whey]
base-classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "sphinx_click"
