[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "sphinx-click"
version = "0.0.0"
description = "Sphinx extension that automatically documents click applications."
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]

[project.license]
file = "LICENSE"

[[project.authors]]
name = 'Dominic Davis-Foster"'
email = "dominic@davis-foster.co.uk"

[project.urls]
Homepage = "https://github.com/sphinx-toolbox/sphinx-click"
"Issue Tracker" = "https://github.com/sphinx-toolbox/sphinx-click/issues"
"Source Code" = "https://github.com/sphinx-toolbox/sphinx-click"

[tool.dep_checker]
allowed_unused = [ "jinja2", "markupsafe",]

[tool.whey]
base-classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9", "3.10", "3.11", "3.12",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "sphinx_click"

[tool.mypy]
python_version = "3.8"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.dependency-dash."tests/requirements.txt"]
order = 20
include = false
